--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -7,10 +7,10 @@
 #
 # Global configuration settings
 #
-OBJECT_TYPE=0
+OBJECT_TYPE=2
 GLOBAL_DEBUGLEVEL= -DDEBUG_LEVEL=4
 
-GLOBAL_COMPILEFLAGS= -DPLATFORMIO -Wall
+GLOBAL_COMPILEFLAGS= -Wall
 
 OPTION_FLAGS = -DOBJECT_TYPE=%(OBJECT_TYPE)s
 GLOBAL_BUILDFLAGS= %(GLOBAL_COMPILEFLAGS)s %(GLOBAL_DEBUGLEVEL)s %(OPTION_FLAGS)s
@@ -18,9 +18,9 @@ GLOBAL_BUILDFLAGS= %(GLOBAL_COMPILEFLAGS)s %(GLOBAL_DEBUGLEVEL)s %(OPTION_FLAGS)
 [platformio]
 lib_dir = /Users/amp/Dropbox/Arduino/libraries
 
-[env:nano]
+[env:nano_prototype] # This uses a standard HMTL pixel board
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
-build_flags = %(GLOBAL_BUILDFLAGS)s -DPIXELS_WS2812B_12
+build_flags = %(GLOBAL_BUILDFLAGS)s -DDISABLE_XBEE -DPIXELS_WS2812B_12
 
