Added platformio build for 32u4 based boards

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -24,3 +24,9 @@ framework = arduino
 board = nanoatmega328
 build_flags = %(GLOBAL_BUILDFLAGS)s -DDISABLE_XBEE -DPIXELS_WS2812B_12
 
+[env:32u4]
+platform = atmelavr
+framework = arduino
+board = sparkfun_promicro16
+build_flags = %(GLOBAL_BUILDFLAGS)s -DDISABLE_XBEE -DPIXELS_WS2812B_10 -DDISABLE_MPR121
+upload_port = /dev/cu.usbmodem1411
